// The CERN Tape Archive(CTA) project
// Copyright(C) 2015  CERN
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
//(at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.
//
syntax = "proto2";
package cta.mediachanger;

message MediaChangerHeader {
 required uint32 magic = 1;

 //see castor::messages::protocolType's anonymous enum for values
 required uint32 protocoltype = 2;

 //see castor::messages::protocolVersion's anonymous enum for values
 required uint32 protocolversion = 3;

 //see castor::messages::msgType's anonymous enum for values
 required uint32 msgtype = 4;

 //will it be hardcoded to SHA1 ?
 required string bodyhashtype = 5;		
 required string bodyhashValue = 6;

	
 required string bodysignaturetype= 7;	
 required string bodysignature = 8;	
}
